--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "caporal": "^1.1.0"
+    "caporal": "^1.1.0",
+    "inquirer": "^6.3.1",
+    "node-rest-client": "^3.1.0"
   }
 }
