--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "http-terminator": "^2.0.3",
     "inquirer": "^6.3.1",
     "open": "^7.0.3",
-    "simple-git": "^2.4.0",
-    "simple-node-logger": "^18.12.24"
+    "simple-git": "^2.4.0"
   },
   "devDependencies": {
     "standard": "^14.3.4"
